--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ authors = ["Hendrik Sollich <hendrik@hoodie.de>"]
 serde = "*"
 serde_json = "*"
 serde_derive = "*"
+log = "0.3"
+env_logger = "0.4" # default feature requires regex
